# NeuronSampler

./: .gitignore  CMakeLists.txt  LICENSE.md  NeuronSampler.sln  README.md
NeuronSampler/: NeuronSampler.kdev4  NeuronSampler.vcxproj  NeuronSampler.vcxproj.filters  data_structures.c  data_structures.h  debug.h  libs.h  main.c  makefile  neuron.c  neuron.h  neuron_functions.c  neuron_functions.h  train.c  train.h
NeuronSampler/.kdev4/: NeuronSampler.kdev4
